Fix header font-size on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ section {
 .navbar-brand,
 h2 {
   font-family: 'Italianno', cursive;
-  font-size: 2.5em;
+  font-size: 2.1em;
 }
 
 .nav-link,
@@ -50,7 +50,7 @@ h3 {
 
 #contact-name {
   font-family: 'Italianno', cursive;
-  font-size: 2.5em;
+  font-size: 2.1em;
 }
 
 #contact-link {
